2006-06-08  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	** Fixes bug #341961.
	* gui/dialogs/event-page.c: (event_page_fill_widgets):
	Removed unnecessary e_cal_component_clone.

2006-06-05  Li Yuan <li.yuan@sun.com>

	* gui/dialogs/cal-prefs-dialog.glade:
	add labelled by relationship between label and e-timezone-entry.
	* gui/e-timezone-entry.c: (add_relation),
	(e_timezone_entry_set_timezone):
	add relationship between label and entry.

2006-06-01  Harish Krishnaswamy  <kharish@novell.com>

	* gui/dialogs/Makefile.am, gui/dialogs/event-editor.c,
	gui/dialogs/task-editor.c: Remove redundant files
	meeting-page.[ch], cal-attachment.glade and references
	in includes.

2006-05-25  Tor Lillqvist  <tml@novell.com>

	* gui/dialogs/event-editor.c (event_editor_init): Construct
	pathname to query-free-busy.png at run-time. Fixes Win32 build
	broken by the fix for #321832 below.

2006-05-22  Harish Krishnaswamy  <kharish@novell.com>

	* gui/memos-component.c: Revert one change from the
	previous commit as the string is not already translated
	and breaks the string freeze.

2006-05-22  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	**Fixes bug #331418
	* gui/memos-component.c: Set mnemonics in popup menu.

2006-04-20  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes the events appearing in different timezone appear in
	right time slot. Partially fixes #332911
	* gui/e-cal-model.c: (e_cal_model_set_instance_times):
	* gui/e-calendar-view.c: (get_label),
	(e_calendar_view_get_tooltips): Get the timezone from the backend
	using the tzid if its not present in the icalcomponent.

2006-05-04  Chenthill Palanisamy  <pchenthill novell com>

	Fixes #333689
	* gui/dialogs/event-page.c
	(init_widgets): Check if the units is -1 before
	adding the menu item.

2006-04-24  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #323409
	* gui/calendar-component.c: (setup_create_ecal): Reset the ecal to NULL.
	* gui/e-calendar-view.c: 